objects/SCP_Certa_GC__Proyecto__c.object
<CustomObject>
    <fields>
        <fullName>SCP_Certa_GC__Cantidad__c</fullName>
        <label>Cantidad</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Estado__c</fullName>
        <label>Estado</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__ID_Delta__c</fullName>
        <label>ID Delta</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Moneda__c</fullName>
        <label>Moneda</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Numero_de_Proyecto__c</fullName>
        <label>Numero de Proyecto</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Oportunidad__c</fullName>
        <label>Oportunidad</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Proyectos</relationshipLabel>
        <relationshipName>Proyectos</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Plazo_contrato__c</fullName>
        <label>Plazo contrato</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__PrecioFinal__c</fullName>
        <formula>IF( SCP_Certa_GC__Moneda__c = &apos;USD&apos;, (( SCP_Certa_GC__Precio__c + ( SCP_Certa_GC__Plazo_contrato__c *  SCP_Certa_GC__montoMensual__c))*  SCP_Certa_GC__Oportunidad__r.SCP_Certa_GC__Dolar_Buget__c ),( SCP_Certa_GC__Precio__c + (SCP_Certa_GC__Plazo_contrato__c * SCP_Certa_GC__montoMensual__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Precio Final</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Precio__c</fullName>
        <label>Precio Total Contrato</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Precio_de_venta__c</fullName>
        <label>Precio de venta</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Producto__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Producto</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Proyectos</relationshipLabel>
        <relationshipName>Proyectos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__TMI__c</fullName>
        <label>TMI</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__montoMensual__c</fullName>
        <label>montoMensual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Proyecto</label>
    <nameField>
        <label>Nombre de Proyecto</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Proyectos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>